# chesshaskell

./: CHANGELOG.md  LICENSE  chesshaskell.cabal
app/: Chess.hs  Draw.hs  Main.hs
