cabal-version:      3.0
name:               chesshaskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Logan M
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable chesshaskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    Chess
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
